Fixed spacing

--- a/src/app/components/item/item.component.scss
+++ b/src/app/components/item/item.component.scss
@@ -1,3 +1,3 @@
 :host:not(:last-child) {
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
